Fix: set max width for small modal variant on tablet (#138)

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -22,7 +22,7 @@
 }
 
 .smallContent {
-    @apply max-h-screen-m rounded-lg lg:max-w-screen-xs;
+    @apply max-h-screen-m rounded-lg md:max-w-screen-xs my-0 mx-auto;
 }
 
 .largeContent {
